--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
     "Professor Raghunath <raghunat@fredonia.edu>"
   ],
   "description": "Helps with generating signed headers for aws v4 signatures.",
-  "main": "dist/aws-client-sign.min.js",
+  "main": "dist/aws-client-sign.js",
   "moduleType": [
     "globals"
   ],
